# evorun

./: .gitignore  README.md  config.example.toml  evorun_config.example.toml  pyproject.toml  treevee_config.example.toml
evorun/: __init__.py  evorun.py  tree_search.py
evorun/engine/: search_node.py
evorun/utils/: response.py
evorun/webapp/: index.html  server.py
evorun/webapp/css/: style.css
evorun/webapp/js/: app.js  charts.js  state-loader.js  tree-viz.js
examples/label_placement/: TASK.md  config.toml  eval.py  pixi.toml
examples/label_placement/experiment/: placer.py
examples/voigt_approx/: TASK.md  config.toml  eval.py
tests/: test_sandbox.py
treevee/: tree_search.py  treevee.py
treevee/engine/: search_node.py
treevee/webapp/: index.html  server.py
treevee/webapp/css/: style.css
treevee/webapp/js/: app.js  charts.js  state-loader.js  tree-viz.js
